--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 markdown: kramdown
 highlighter: rouge
 paginate: 100 # it will paginate after this number
-language: 'en-uk'
+language: 'utf-8'
 words_per_minute: 200
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /jasper2/
+baseurl: https://https://goodtjdgk.github.io/
 
 # Website info
-title: Ghost
-description: The professional publishing platform
+title: my study
+description: goodtjdgk
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
