--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ language: 'utf-8'
 words_per_minute: 200
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: https://https://goodtjdgk.github.io/
+baseurl: 
+url: https://https://goodtjdgk.github.io/
 
 # Website info
 title: my study
